tests/transpiler/x/hs/short_circuit.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 19:46:29 GMT+7
boom a b = do
    putStrLn ("boom")
    return (True)


main :: IO ()
main = do
    print (fromEnum (False && boom 1 2))
    print (fromEnum (True || boom 1 2))
